# pyask

./: README.md  pyproject.toml
pyask/: __init__.py  ask.py  numeric.py  path.py  selection.py  string.py  utils.py
tests/: test_pyask.py
