[tool.poetry]
name = "pyask"
version = "0.1.8"
description = "Library for terminal programs to ask users questions."
authors = ["Thomas M Ward <thomas@thomasward.com>"]
license = "ISCL"
readme = "README.md"
repository = "https://github.com/tmward/pyask"


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
